# aoc2015

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: .gitignore  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  main.rs
